# StorageRedirect-V2

./: PLAN.md  PRD.md  demo.html  模块 WebUI.md  模块开发指南.md  模块配置.md
.github/workflows/: build.yml
.trae/documents/: 提交代码到 GitHub.md
daemon/: config.go  go.mod  logger.go  main.go  server.go
daemon/cmd/daemonctl/: main.go
module/: customize.sh  module.prop  service.sh  uninstall.sh
module/webroot/: index.html
module/webroot/assets/: main--rvDnbAE.js  main-031sLMER.js  main-8D90X2xd.css  main-B6EI-0yN.js  main-B7HG8PI2.js  main-B87j5Lvz.css  main-BHK0cXh8.js  main-BKifD3my.js  main-BOFgg_Zt.js  main-BSvKU0YC.js  main-BTrl3V9C.js  main-BUaV1z6N.js  main-BVY085Jw.js  main-BVajmv6M.js  main-BWF-UllE.js  main-BX2L-no0.css  main-BXGxXTbh.js  main-BZvJf_zx.js  main-Bgdauydt.css  main-BkM6NZC1.css  main-BpV1crYc.js  main-C4rEX6Hk.css  main-CEY0-bxv.js  main-CEitTLC6.js  main-CRGno8bs.css  main-CRefiwuz.js  main-CYLSxty0.js  main-CcuGV2U2.js  main-Ce1faiyF.css  main-ChJKhaSm.css  main-CngXM2Hs.css  main-Coylddyt.css  main-CrRWZ5O2.css  main-Cs1noAUO.css  main-CxLJQery.js  main-D1k0BhBW.js  main-D9opWivk.js  main-DFwKwhls.js  main-DJ_aVwvw.css  main-DKcqqo8W.js  (+17 more)
native/: CMakeLists.txt  config.cpp  config.h  hook.cpp  hook.h  ipc.cpp  ipc.h  main.cpp  utils.cpp  utils.h  zygisk.hpp
webroot示例/: index.html  webui-Actions.54ca2825.js  webui-Actions.9697af8b.css
webui/: index.html  package-lock.json  package.json  vite.config.js
webui/src/: App.vue  main.js
webui/src/components/: LazyAppIcon.vue
webui/src/stores/: app.js
webui/src/views/: About.vue  AppDetail.vue  (+3 more)
